2002-10-09  Sam Steingold  <sds@gnu.org>

	* spvw_memfile.d (loadmem_from_handle): accept a second argument
	'filename' for better error reporting

2002-10-06  Sam Steingold  <sds@gnu.org>

	* realelem.d (F_R_float_F, RA_R_float_F): use Lfloat_length(y)
	instead of O(LF_digits), when y is actually a long float
	* realtran.d (R_cosh_sinh_R_R): handle start_p/end_p for x=0 too
	* comptran.d (N_N_log_N): fixed a typo in the last patch
	(N_cis_N): (sin a) may be 0
	(N_exp_N): handle contagion properly
	* lisparit.d (EXP): pass a real as the 3rd arg of N_exp_N
	(LOG): pass a real as the 3rd arg of N_log_N

2002-10-04  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 618428 ]: LOOP: local variables shadowing globals
	* loop.lisp (expand-loop): initialize accumulation variables
	after iteration variables

2002-10-04  Sam Steingold  <sds@gnu.org>

	* spvw.d (init_object_tab) [DEBUG_SPVW]: add :CLISP-DEBUG to features
	* compiler.lisp: COMPILER-DEBUG --> CLISP-DEBUG
	(make-anode) [CLISP-DEBUG]: define when LOAD
	[CLISP-DEBUG]: do not remprop SYS::DEFSTRUCT-DESCRIPTION,

2002-10-04  John Hinsdale <hin@alma.com>

	* modules/oracle/oracle.lisp: More error checking throughout

2002-10-03  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (read-sequence, write-sequence): when deciding
	between byte and char i/o, check the sequence element type too

2002-10-02  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (test_symbol): moved here from symbol.d
	(test_symbol_non_constant): declare new function
	* error.d (test_symbol_non_constant): new function
	* control.d (funname_to_symbol): new function
	(FDEFINITION, FBOUNDP, FMAKUNBOUND): use it
	(fehler_funsymbol, fehler_symbol_constant): removed
	(FUNCTION, FLET, LABELS): use fehler_funname_source() instead of
	fehler_funsymbol()
	(check_setq_body, SET, MAKUNBOUND, COMPILER-LET)
	(MULTIPLE-VALUE-SETQ): use test_symbol_non_constant()
	(%SYMBOL-VALUE, SYMBOL-VALUE, SYMBOL-FUNCTION, BOUNDP)
	(SPECIAL-OPERATOR-P, BLOCK, RETURN-FROM)